# rust-symphony

./: Cargo.toml  README.md  WORKFLOW.md
assets/: dashboard.css  dashboard.js
src/: cli.rs  codex.rs  config.rs  lib.rs  main.rs  model.rs  orchestrator.rs  presenter.rs  tracker.rs  tui.rs  web.rs  workflow.rs  workspace.rs
